apps/monitoring/kube-prometheus-stack/resources/ingress.yml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: tailscale-prometheus-ingress
spec:
  ingressClassName: tailscale
  tls: [{ hosts: [prometheus] }]
  defaultBackend:
    service:
      name: kube-prometheus-stack-prometheus
      port:
        number: 9090

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: tailscale-grafana-ingress
spec:
  ingressClassName: tailscale
  tls: [{ hosts: [grafana] }]
  defaultBackend:
    service:
      name: kube-prometheus-stack-grafana
      port:
        number: 80
